# dproxy/controllers/server.py
@@ -1,5 +1,6 @@
 from dproxy.util.config import Config
 from dproxy.util.logger import get_logger
+from dproxy.util.http_helper import get_http
 
 import os
 import requests
@@ -11,7 +12,8 @@ logger = get_logger()
 def patch_server():
     data = request.get_json()
     cookies = {"access_token_cookie": request.headers["Authorization"]}
-    r = requests.patch(f"{Config.DEPLOYMENT_API_URI}/server/hostname/{data['hostname']}", cookies=cookies, json=data)
+    http = get_http()
+    r = http.patch(f"{Config.DEPLOYMENT_API_URI}/server/hostname/{data['hostname']}", cookies=cookies, json=data)
     resp = r.json()
     logger.info(f"Updated Server: {resp} {r.status_code}")
     return resp, r.status_code
